tests/reference/asr-subroutine3-9c6f5d1.stderr
semantic error: Argument of 'size' must be an array
 --> tests/errors/subroutine3.f90:5:19
  |
5 |     print *, size(f)
  |                   ^ 
